<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Slight backup</string>
    <string name="menu_export">Export &#8230;</string>
    <string name="menu_exporteverything">Export everything</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="contextmenu_deletefile">Delete file</string>
    <string name="contextmenu_deletedaydata">Delete this days data</string>
    <string name="error_nosdcard">No SD-card present.</string>
    <string name="error_unsupporteddatabasestructure">Unsupported database structure</string>
    <string name="error_couldnotcreatebackupfolder">Could not create backupfolder (%s)</string>
    <string name="error_somethingwentwrong">Something went wrong: %s.</string>
    <string name="hint_nobackupsfound">No backups found - press menu-key to create some.</string>
    <string name="hint_noexportdata">No data available for export.</string>
    <string name="hint_exporting">Exporting %s &#8230;</string>
    <string name="hint_existed">\"%s\" existed</string>
    <string name="hint_smsairplanemode">The to import the SMS, please enable the airplane mode and try importing the messages again.</string>
    
    <!-- there is no need for a translation of the following string -->
    <string name="license">Slight backup - a simple backup tool\n\n

		Copyright &#169; 2011-2014 Stefan Handschuh (handschuh.stefan@googlemail.com)\n\n

		Translators\n
			 - French: &lt;unnamed&gt;\n
			 - Turkish: &lt;unnamed&gt;\n\n
			
		Permission is hereby granted, free of charge, to any person obtaining a copy
		of this software and associated documentation files (the "Software"), to deal
		in the Software without restriction, including without limitation the rights
		to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
		copies of the Software, and to permit persons to whom the Software is
		furnished to do so, subject to the following conditions:\n\n

		The above copyright notice and this permission notice shall be included in
		all copies or substantial portions of the Software.\n\n

		THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
		IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
		FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
		AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
		LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
		OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
		THE SOFTWARE.
    </string>
    <string name="license_intro">This software is distributed under the MIT open source license and its source code is available under http://github.com/handschuh/Slight-backup</string>
    <string name="message_exportedto">Exported into %s.</string>
    <string name="message_importsuccessful">Import successful.</string>
    <plurals name="message_importsuccessful_skipped">
        <item quantity="one">Import successful, but skipped 1 entry.</item>
        <item quantity="other">Import successful, but skipped %d entries.</item>
    </plurals>
    <string name="message_skippedallentries">Skipped all entries.</string>
    <plurals name="listentry_items">
        <item quantity="one">1 item in</item>
        <item quantity="other">%d items in</item>
    </plurals>
    <string name="button_import">Import</string>
    <string name="button_accept">Accept</string>
    <string name="button_decline">Decline</string>
    <string name="smsmessages">short messages</string>
    <string name="calllogs">call-logs</string>
    <string name="bookmarks">bookmarks</string>
    <string name="userdictionary">user-dictionary</string>
    <string name="playlists">playlists</string>
    <string name="settings">settings</string>
    <string name="wifisettings">wifi-settings</string>
    <string name="contacts">contacts</string>
    <string name="dialog_export">Export</string>
    <string name="dialog_licenseagreement">License</string>
    <string name="question_deletefile">Do you really want to delete the file %s?</string>
    
    <string name="settings_category_cyclicbehavior">Cyclic behavior</string>
    <string name="settings_cyclecount">Cycle count (experimental)</string>
    <string name="settings_cyclecount_description">Max. number of backups of one type</string>
    <string name="settings_category_storage">Storage</string>
    <string name="settings_storagelocation">Storage location</string>
    <string name="settings_storagelocation_description">Location of the backup files</string>
    <string name="settings_storagelocation_hint">Standard external storage</string>
    <string name="settings_hideincompletedatawarnings">Hide data warnings</string>
    <string name="settings_hideincompletedatawarnings_description">Hide warnings about incomplete data before im- and export</string>

    <string name="warning_incompletedata_import">The import of the %s will be very likely incomplete.</string>
    <string name="warning_incompletedata_export">The export of the %s will be very likely incomplete.</string>
    <string name="warning_defaultsmsapplication">If you don\'t change the default Messaging application to the value before the change that was needed for the SMS import, all incomming messages will be lost since Slight backup cannot process incomming messages.</string>
    <string name="warning_enableairplanemode">Enable the airplanemode while Slight backup is the default Messaging application. Slight backup cannot process incomming messages such that they will be lost.</string>
    <string name="warning_aftersmsimport">In order to import SMS, Slight backup has to be defined as the default Messaging application. Since Slight backup cannot process incomming messages, the airplane mode has to be activated while Slight backup is the default
                                          Messaging application. After the change of the standard Messaging application, tap on the backupfile again to initiate the import. After the import, the prior Messaging application has to be set as the standard Messaging application again to prevent the loss of incomming messages (Slight backup will try to initiate the change). After Slight backup is not the standard Messaging application anymore,
                                          the airplane mode can be disabled.</string>

    <string-array name="settings_cyclecountvalues">
        <item>Unlimited</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
</resources>
